[package]
name = "sfp-ap-bsp"
version = "0.1.0"
edition = "2021"
authors = ["S.MacLennan <sam@maclennan.dev>"]
description = "Board support package for SFP Access Port"
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
rp2040-boot2 = {version = "0.2.0", optional = true }
rp2040-hal = "0.4.0"
cortex-m-rt = { version = "0.7.1", optional = true }
embedded-time = "0.12.1"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.6.0"
futures = "0.3.21"

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]